--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.0.2",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-particles": "^2.12.2",
     "tsparticles-engine": "^2.12.0",
